<resources>

    <!-- App settings -->
    <string name="app_name" translatable="false">task-1</string>


    <!-- Auth layout -->
    <string name="settings">Settings</string>
    <string name="name_lastname_placeholder">Name Lastname</string>
    <string name="career_placeholder">Career</string>
    <string name="home_address_placeholder">Home address</string>
    <string name="fill_profile_proposal">Go to settings and fill out the profile</string>
    <string name="edit_profile_button">Edit profile</string>
    <string name="view_contacts_button">VIEW MY CONTACTS</string>
    <string name="greeting">Let\'s get acquainted</string>
    <string name="fill_form_proposal">Fill out the profile and go to the application!</string>
    <string name="email_placeholder">E-mail</string>
    <string name="enter_email">Enter email</string>
    <string name="password_placeholder">Password</string>
    <string name="enter_pass">Enter password</string>
    <string name="remember_me_checkbox">Remember me</string>
    <string name="google_button" translatable="false">GOOGLE</string>
    <string name="or">or</string>

    <!-- TODO: Just user upper case in xml-->
    <string name="register_button">REGISTER</string>

    <string name="terms_agreement">By clicking Register you agree to our Terms\nand Conditions</string>
    <string name="terms_agreement_land">By clicking Register you agree to our Terms and Conditions</string>
    <string name="have_acc_question">Already have an account?</string>
    <string name="sign_in_button">Sign in</string>


</resources>