<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <!-- TODO: Constraint layout -->
    <!-- TODO: Dimens (dp, sp) -> resources -->
    <!-- TODO: TextView/EditText.... (but no View) -> AppCompat -->
    <!-- TODO: id naming -->
    <!-- TODO: fonts -> font.ttf (not xml) -->
    <!-- TODO: email/password -> text input layout -->
    <!-- TODO: check box -> as in figma (selector) -->
    <!-- TODO: repeated text attrs -> text styles -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="18"
            android:background="@color/dark_blue"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="178dp"
                android:fontFamily="@font/cc_ysabeau_semi_bold"
                android:gravity="center"
                android:text="@string/greeting"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/cc_ysabeau_semi_bold"
                android:gravity="center"
                android:text="@string/fill_form_proposal"
                android:textColor="@color/grey"
                android:textSize="12sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/cc_ysabeau_semi_bold"
                android:gravity="start"
                android:text="@string/email_placeholder"
                android:textColor="@color/grey"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/emailText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="0dp"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/cc_ysabeau_semi_bold"
                android:hint="@string/enter_email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/grey"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/cc_ysabeau_semi_bold"
                android:gravity="start"
                android:text="@string/password_placeholder"
                android:textColor="@color/grey"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/passwordText"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="0dp"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/cc_ysabeau_semi_bold"
                android:hint="@string/enter_pass"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/grey"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/chk_remember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="0dp"
                android:checked="true"
                android:theme="@style/checkBoxStyle"
                android:fontFamily="@font/cc_ysabeau_semi_bold"
                android:text="@string/remember_me_checkbox"
                android:textColor="@color/grey"
                android:textSize="14sp" />

            <!-- TODO: merged -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="55dp"
                android:background="@drawable/google_button_shape"
                android:clickable="true"
                android:focusable="true"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="130dp"
                    android:src="@drawable/google_logo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:fontFamily="@font/cc_ysabeau_semi_bold"
                    android:gravity="center"
                    android:text="@string/google_button"
                    android:textColor="?android:textColor"
                    android:textSize="16sp" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/cc_ysabeau_semi_bold"
                android:gravity="center"
                android:text="@string/or"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/register_button"
                android:fontFamily="@font/cc_ysabeau_semi_bold"
                android:text="@string/register_button"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:paddingHorizontal="30dp"
                android:weightSum="20">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/cc_ysabeau_semi_bold"
                    android:gravity="center"
                    android:text="@string/terms_agreement"
                    android:textColor="@color/white"
                    android:textSize="12sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/cc_ysabeau_semi_bold"
                    android:text="@string/have_acc_question"
                    android:textColor="@color/grey"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/sign_in_click"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:focusable="true"
                    android:fontFamily="@font/cc_ysabeau_semi_bold"
                    android:text="@string/sign_in_button"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

            </LinearLayout>


        </LinearLayout>

</FrameLayout>